refactor index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             </div>
             
             <input type="text" class="entrada" placeholder="ESCRIBI" id = "entrada">
-            <div id="probar" class="boton-probar">PROBAR</div>
+            <button class = "boton-probar" onclick="probar()">PROBAR</button>
+            <!-- <div id="probar" class="boton-probar">PROBAR</div> -->
             <div id="mensajes"></div>
         </main>
         <footer></footer>
