--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             
             <input type="text" class="entrada" placeholder="ESCRIBI" id = "entrada">
-            <button class = "boton-probar" onclick="probar()">PROBAR</button>
+            <button class = "boton-probar" onclick="probar()" id ="boton-probar">PROBAR</button>
             <!-- <div id="probar" class="boton-probar">PROBAR</div> -->
             <div id="mensajes"></div>
         </main>
