agregar version al titulo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-        <header>TuttyWordle</header>
+        <header><h1>TuttyWordle <span class="version">v0.01</span></h1></header>
         <main>
             <div class = "adivinando-container">
                 <div class="adivinando" id="adivinando"></div>
